--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>About US</h1>
-<p>We are working on Exchangeogram</p>
+<h1>Wolfpack</h1>
+<p>"Four of us wolves, running around the desert together, in Las Vegas, looking for strippers and cocaine. So tonight, I make a toast!"
+	- Alan Garner
+</p>
